# sandbox_rabbitmq

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  environment.yml  requirements-dev.txt  requirements.txt  setup.cfg
scripts/: 00_start.sh  10_webclient.sh  20_consumer.sh
src/ping/: consumer.py  producer.py  utils.py
src/pingpong/: client.py  consumer.py  producer.py
